--- a/src/components/Menu/Menu.css
+++ b/src/components/Menu/Menu.css
@@ -1,47 +1,28 @@
 ion-menu ion-content {
   --background: var(--ion-item-background, var(--ion-background-color, #fff));
-}
-
-ion-menu.md ion-content {
-  --padding-start: 8px;
-  --padding-end: 8px;
-  --padding-top: 20px;
-  --padding-bottom: 20px;
+  --overflow: hidden;
 }
 
 ion-menu.md ion-list {
-  padding: 20px 0;
+  padding: 0;
 }
 
-ion-menu.md ion-note {
-  margin-bottom: 30px;
+ion-menu.md {
+  margin-bottom: 0;
 }
 
-ion-menu.md ion-list-header, ion-menu.md ion-note {
+ion-menu.md ion-list-header, ion-menu.md {
   padding-left: 10px;
 }
 
-ion-menu.md ion-list#inbox-list {
+ion-menu.md ion-list#main-list {
   border-bottom: 1px solid var(--ion-color-step-150, #d7d8da);
 }
 
-ion-menu.md ion-list#inbox-list ion-list-header {
+ion-menu.md ion-list#main-list ion-list-header {
   font-size: 22px;
   font-weight: 600;
   min-height: 20px;
-}
-
-ion-menu.md ion-list#labels-list ion-list-header {
-  font-size: 16px;
-  margin-bottom: 18px;
-  color: #757575;
-  min-height: 26px;
-}
-
-ion-menu.md ion-item {
-  --padding-start: 10px;
-  --padding-end: 10px;
-  border-radius: 4px;
 }
 
 ion-menu.md ion-item.selected {
@@ -50,10 +31,6 @@ ion-menu.md ion-item.selected {
 
 ion-menu.md ion-item.selected ion-icon {
   color: var(--ion-color-primary);
-}
-
-ion-menu.md ion-item ion-icon {
-  color: #616e7e;
 }
 
 ion-menu.md ion-item ion-label {
@@ -65,7 +42,7 @@ ion-menu.ios ion-content {
 }
 
 ion-menu.ios ion-list {
-  padding: 20px 0 0 0;
+  padding: 0 0 0 0;
 }
 
 ion-menu.ios ion-note {
@@ -79,21 +56,17 @@ ion-menu.ios ion-item {
   --min-height: 50px;
 }
 
-ion-menu.ios ion-item ion-icon {
-  font-size: 24px;
-  color: #73849a;
+ion-menu.ios ion-label.ios {
+  font-size: 3.8vw;
+  color: var(--ion-color-primary);
 }
 
 ion-menu.ios ion-item .selected ion-icon {
   color: var(--ion-color-primary);
 }
 
-ion-menu.ios ion-list#labels-list ion-list-header {
-  margin-bottom: 8px;
-}
-
 ion-menu.ios ion-list-header,
-ion-menu.ios ion-note {
+ion-menu.ios {
   padding-left: 16px;
   padding-right: 16px;
 }
@@ -102,12 +75,14 @@ ion-menu.ios ion-note {
   margin-bottom: 8px;
 }
 
-ion-note {
-  display: inline-block;
-  font-size: 16px;
-  color: var(--ion-color-medium-shade);
-}
-
 ion-item.selected {
   --color: var(--ion-color-primary);
-} 
+}
+.toggle-button{
+  padding:5px;
+}
+.titleh{
+  margin-top: 15px;
+  margin-bottom: 15px;
+  color:var(--ion-color-primary-shade);
+}
